# quant-bot

./: .gitignore  CMakeLists.txt  README.md
src/: interfaces.hpp  main.cpp  types.hpp
src/infrastructure/: binance_connector.hpp  mock_exchange.hpp
src/math/: ou_model.hpp
src/strategies/: pairs_trading.hpp
